crates/swc_ecma_react_compiler/tests/fixtures/upstream/gating/error.dynamic-gating-invalid-identifier/error.txt
Found 1 error:

Error: Dynamic gating directive is not a valid JavaScript identifier

Found 'use memo if(true)'.

error.dynamic-gating-invalid-identifier.ts:4:2
  2 |
  3 | function Foo() {
> 4 |   'use memo if(true)';
    |   ^^^^^^^^^^^^^^^^^^^^ Dynamic gating directive is not a valid JavaScript identifier
  5 |   return <div>hello world</div>;
  6 | }
  7 |
